# cove

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  main.py  openapi.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.openapi/FastAPI/: opencollection.yml
.openapi/FastAPI - 1/: Add User to Item.yml  Add User to Project.yml  Create Key Value.yml  Create Project.yml  Create User.yml  Delete Key Value.yml  Delete Project.yml  Get All Key Values.yml  Get All Projects.yml  Get Key Value.yml  Get Project.yml  Login For Access Token.yml  Ping.yml  Remove User from Item.yml  Remove User from Project.yml  Test User Logged In.yml  Toggle Project Visibility.yml  Update Key Value.yml  opencollection.yml
.openapi/FastAPI - 1/environments/: lyubo2.yml
.openapi/FastAPI/health/: Ping.yml
.openapi/FastAPI/key_value/{project_id}/: Get All Key Values.yml
.openapi/FastAPI/project/: Get All Projects.yml
.openapi/FastAPI/project/{name}/: Create Project.yml
.openapi/FastAPI/project/{project_id}/: Delete Project.yml  Toggle Project Visibility.yml
alembic/versions/: 1f960a7d170a_create_key_value_table.py  443d2f4dd185_handle_per_user_access.py  6708af47a9ab_remove_per_item_access_limits.py  a3c1f82e4d56_v2.py  f3d85ac5d377_add_auth.py  ff71e85db90d_v1.py
api_tests/: Get projects.yml  get.yml  opencollection.yml  patch.yml
api_tests/environments/: cove.yml
src/cove/: dependencies.py
src/cove/models/: api_keys.py  config_item.py  projects.py  users.py
src/cove/routes/: api_keys.py  json_item.py  key_value.py  projects.py  python_item.py  users.py
src/cove/services/: auth.py
src/models/: config_item.py
tests/: conftest.py  test_api_keys.py  test_get_all_json_items.py  test_get_all_key_values.py  test_get_all_python_items.py  test_json_item.py  test_key_value.py  test_projects.py  test_python_item.py  test_users.py
(+6 files in other folders)
