[project]
name = "cove"
version = "1.0.0"
description = "A simple API for managing a collection of configuration items and files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "dotenv==0.9.9",
    "fastapi[standard]==0.129.2",
    "pwdlib[argon2]==0.3.0",
    "pyjwt==2.11.0",
    "sqlmodel==0.0.37",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "complexipy>=5.2.0",
    "mypy>=1.19.1",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.pylint]
max-line-length = 120